ArabicCompiler/Generated/ExprParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Expr.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class ExprParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PROGRAM=1, CONST=2, TYPE=3, VARIABLE=4, PROCEDURE=5, LIST=6, FROM=7, RECORD=8, 
		BY_VALUE=9, BY_REFERENCE=10, IF=11, THEN=12, ELSE=13, FOR=14, TO=15, STEP=16, 
		WHILE=17, CONTINUE=18, REPEAT=19, UNTIL=20, READ=21, PRINT=22, TRUE=23, 
		FALSE=24, DT_INTEGER=25, DT_REAL=26, DT_LOGICAL=27, DT_CHAR=28, DT_STRING=29, 
		L_PAREN=30, R_PAREN=31, L_SQUARE_BRACKET=32, R_SQUARE_BRACKET=33, L_CURLY_BRACE=34, 
		R_CURLY_BRACE=35, COMMA=36, SEMICOLON=37, COLON=38, DOT=39, EQUALS=40, 
		PLUS=41, MINUS=42, MULT=43, DIV=44, INT_DIV=45, MOD=46, POWER=47, AND=48, 
		OR=49, NOT=50, EQUALS_OP=51, NOT_EQUALS_OP=52, GTE=53, LTE=54, GT=55, 
		LT=56, ID=57, REAL_NUMBER=58, INTEGER=59, STRING_LITERAL=60, CHAR_LITERAL=61, 
		WS=62, LINE_COMMENT=63;
	public const int
		RULE_program = 0, RULE_block = 1, RULE_definitions_part = 2, RULE_constants_definition = 3, 
		RULE_constant_def = 4, RULE_types_definition = 5, RULE_type_def = 6, RULE_variables_definition = 7, 
		RULE_variable_def = 8, RULE_procedures_definition = 9, RULE_procedure_def = 10, 
		RULE_composite_type = 11, RULE_list_type = 12, RULE_record_type = 13, 
		RULE_fields_list = 14, RULE_field_def = 15, RULE_variables_group = 16, 
		RULE_procedure_header = 17, RULE_procedure_block = 18, RULE_formal_params_list = 19, 
		RULE_param_def = 20, RULE_data_type = 21, RULE_instructions_list = 22, 
		RULE_instruction = 23, RULE_assignment_statement = 24, RULE_input_statement = 25, 
		RULE_output_statement = 26, RULE_call_statement = 27, RULE_print_list = 28, 
		RULE_print_item = 29, RULE_actual_params_list = 30, RULE_actual_param = 31, 
		RULE_conditional_statement = 32, RULE_condition = 33, RULE_loop_statement = 34, 
		RULE_for_loop_statement = 35, RULE_iteration_range = 36, RULE_while_loop_statement = 37, 
		RULE_repeat_until_statement = 38, RULE_expression = 39, RULE_simple_expression = 40, 
		RULE_term = 41, RULE_factor = 42, RULE_variable_access = 43, RULE_selector = 44, 
		RULE_indexed_selector = 45, RULE_field_selector = 46, RULE_constant_value = 47, 
		RULE_numeric_value = 48, RULE_literal_value = 49, RULE_logical_value = 50, 
		RULE_relational_op = 51, RULE_sign = 52, RULE_add_op = 53, RULE_mul_op = 54;
	public static readonly string[] ruleNames = {
		"program", "block", "definitions_part", "constants_definition", "constant_def", 
		"types_definition", "type_def", "variables_definition", "variable_def", 
		"procedures_definition", "procedure_def", "composite_type", "list_type", 
		"record_type", "fields_list", "field_def", "variables_group", "procedure_header", 
		"procedure_block", "formal_params_list", "param_def", "data_type", "instructions_list", 
		"instruction", "assignment_statement", "input_statement", "output_statement", 
		"call_statement", "print_list", "print_item", "actual_params_list", "actual_param", 
		"conditional_statement", "condition", "loop_statement", "for_loop_statement", 
		"iteration_range", "while_loop_statement", "repeat_until_statement", "expression", 
		"simple_expression", "term", "factor", "variable_access", "selector", 
		"indexed_selector", "field_selector", "constant_value", "numeric_value", 
		"literal_value", "logical_value", "relational_op", "sign", "add_op", "mul_op"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\\u0628\\u0631\\u0646\\u0627\\u0645\\u062C'", "'\\u062B\\u0627\\u0628\\u062A'", 
		"'\\u0646\\u0648\\u0639'", "'\\u0645\\u062A\\u063A\\u064A\\u0631'", "'\\u0627\\u062C\\u0631\\u0627\\u0621'", 
		"'\\u0642\\u0627\\u0626\\u0645\\u0629'", "'\\u0645\\u0646'", "'\\u0633\\u062C\\u0644'", 
		"'\\u0628\\u0627\\u0644\\u0642\\u064A\\u0645\\u0629'", "'\\u0628\\u0627\\u0644\\u0645\\u0631\\u062C\\u0639'", 
		"'\\u0627\\u0630\\u0627'", "'\\u0641\\u0627\\u0646'", "'\\u0648\\u0627\\u0644\\u0627'", 
		"'\\u0643\\u0631\\u0631'", "'\\u0627\\u0644\\u0649'", "'\\u0627\\u0636\\u0641'", 
		"'\\u0637\\u0627\\u0644\\u0645\\u0627'", "'\\u0627\\u0633\\u062A\\u0645\\u0631'", 
		"'\\u0627\\u0639\\u062F'", "'\\u062D\\u062A\\u0649'", "'\\u0627\\u0642\\u0631\\u0627'", 
		"'\\u0627\\u0637\\u0628\\u0639'", "'\\u0635\\u062D'", "'\\u062E\\u0637\\u0623'", 
		"'\\u0635\\u062D\\u064A\\u062D'", "'\\u062D\\u0642\\u064A\\u0642\\u064A'", 
		"'\\u0645\\u0646\\u0637\\u0642\\u064A'", "'\\u062D\\u0631\\u0641\\u064A'", 
		"'\\u062E\\u064A\\u0637_\\u0631\\u0645\\u0632\\u064A'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'\\u060C'", "'\\u061B'", "':'", "'.'", "'='", 
		"'+'", "'-'", "'*'", "'/'", "'\\'", "'%'", "'^'", "'&&'", "'||'", "'!'", 
		"'=='", "'=!'", "'>='", "'<='", "'>'", "'<'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PROGRAM", "CONST", "TYPE", "VARIABLE", "PROCEDURE", "LIST", "FROM", 
		"RECORD", "BY_VALUE", "BY_REFERENCE", "IF", "THEN", "ELSE", "FOR", "TO", 
		"STEP", "WHILE", "CONTINUE", "REPEAT", "UNTIL", "READ", "PRINT", "TRUE", 
		"FALSE", "DT_INTEGER", "DT_REAL", "DT_LOGICAL", "DT_CHAR", "DT_STRING", 
		"L_PAREN", "R_PAREN", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", "L_CURLY_BRACE", 
		"R_CURLY_BRACE", "COMMA", "SEMICOLON", "COLON", "DOT", "EQUALS", "PLUS", 
		"MINUS", "MULT", "DIV", "INT_DIV", "MOD", "POWER", "AND", "OR", "NOT", 
		"EQUALS_OP", "NOT_EQUALS_OP", "GTE", "LTE", "GT", "LT", "ID", "REAL_NUMBER", 
		"INTEGER", "STRING_LITERAL", "CHAR_LITERAL", "WS", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Expr.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ExprParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ExprParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ExprParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROGRAM() { return GetToken(ExprParser.PROGRAM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(ExprParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(ExprParser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(PROGRAM);
			State = 111;
			Match(ID);
			State = 112;
			Match(SEMICOLON);
			State = 113;
			block();
			State = 114;
			Match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Definitions_partContext definitions_part() {
			return GetRuleContext<Definitions_partContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Instructions_listContext instructions_list() {
			return GetRuleContext<Instructions_listContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			definitions_part();
			State = 117;
			instructions_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Definitions_partContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Constants_definitionContext constants_definition() {
			return GetRuleContext<Constants_definitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Types_definitionContext types_definition() {
			return GetRuleContext<Types_definitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variables_definitionContext variables_definition() {
			return GetRuleContext<Variables_definitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Procedures_definitionContext procedures_definition() {
			return GetRuleContext<Procedures_definitionContext>(0);
		}
		public Definitions_partContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definitions_part; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterDefinitions_part(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitDefinitions_part(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefinitions_part(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Definitions_partContext definitions_part() {
		Definitions_partContext _localctx = new Definitions_partContext(Context, State);
		EnterRule(_localctx, 4, RULE_definitions_part);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CONST) {
				{
				State = 119;
				constants_definition();
				}
			}

			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TYPE) {
				{
				State = 122;
				types_definition();
				}
			}

			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==VARIABLE) {
				{
				State = 125;
				variables_definition();
				}
			}

			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PROCEDURE) {
				{
				State = 128;
				procedures_definition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Constants_definitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONST() { return GetToken(ExprParser.CONST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Constant_defContext[] constant_def() {
			return GetRuleContexts<Constant_defContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Constant_defContext constant_def(int i) {
			return GetRuleContext<Constant_defContext>(i);
		}
		public Constants_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constants_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterConstants_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitConstants_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstants_definition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Constants_definitionContext constants_definition() {
		Constants_definitionContext _localctx = new Constants_definitionContext(Context, State);
		EnterRule(_localctx, 6, RULE_constants_definition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			Match(CONST);
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 132;
				constant_def();
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Constant_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(ExprParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Constant_valueContext constant_value() {
			return GetRuleContext<Constant_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(ExprParser.SEMICOLON, 0); }
		public Constant_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterConstant_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitConstant_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Constant_defContext constant_def() {
		Constant_defContext _localctx = new Constant_defContext(Context, State);
		EnterRule(_localctx, 8, RULE_constant_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			Match(ID);
			State = 138;
			Match(EQUALS);
			State = 139;
			constant_value();
			State = 140;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Types_definitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(ExprParser.TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_defContext[] type_def() {
			return GetRuleContexts<Type_defContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_defContext type_def(int i) {
			return GetRuleContext<Type_defContext>(i);
		}
		public Types_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_types_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterTypes_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitTypes_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypes_definition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Types_definitionContext types_definition() {
		Types_definitionContext _localctx = new Types_definitionContext(Context, State);
		EnterRule(_localctx, 10, RULE_types_definition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			Match(TYPE);
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 143;
				type_def();
				}
				}
				State = 146;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(ExprParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Composite_typeContext composite_type() {
			return GetRuleContext<Composite_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(ExprParser.SEMICOLON, 0); }
		public Type_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterType_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitType_def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_def(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_defContext type_def() {
		Type_defContext _localctx = new Type_defContext(Context, State);
		EnterRule(_localctx, 12, RULE_type_def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			Match(ID);
			State = 149;
			Match(EQUALS);
			State = 150;
			composite_type();
			State = 151;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Variables_definitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(ExprParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Variable_defContext[] variable_def() {
			return GetRuleContexts<Variable_defContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variable_defContext variable_def(int i) {
			return GetRuleContext<Variable_defContext>(i);
		}
		public Variables_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variables_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterVariables_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitVariables_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariables_definition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Variables_definitionContext variables_definition() {
		Variables_definitionContext _localctx = new Variables_definitionContext(Context, State);
		EnterRule(_localctx, 14, RULE_variables_definition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			Match(VARIABLE);
			State = 155;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 154;
				variable_def();
				}
				}
				State = 157;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
